<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:gravity="center"
    android:padding="25dp"
     >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/snake" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_newgame_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_newgame_main" />
        <Button
            android:id="@+id/btn_rankinglist_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_rankinglist_main" />
        <Button
            android:id="@+id/btn_help_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_help_main" />
        <Button
            android:id="@+id/btn_exitgame_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_exitgame_main" />

    </LinearLayout>

</LinearLayout>
