<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
     >

    <TextView
        android:id="@+id/item_name_of_lst_rank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/txt_lst_head_name"
        android:textColor="@color/white"
        android:textSize="@dimen/frontsize_normal" />

    <TextView
        android:id="@+id/item_scores_of_lst_rank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/txt_lst_head_scores"
        android:textColor="@color/white"
        android:textSize="@dimen/frontsize_normal" />

    <TextView
        android:id="@+id/item_date_of_lst_rank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:text="@string/txt_lst_head_date"
        android:textColor="@color/white"
        android:textSize="@dimen/frontsize_normal" />

</LinearLayout>